--- a/demos/09-combining selectors/css/style.css
+++ b/demos/09-combining selectors/css/style.css
@@ -16,3 +16,31 @@ body {
 #navbar a {
     color: white;
 }
+
+p a {
+    color: teal;
+}
+
+p.warning {
+    color: crimson;
+}
+
+p.warning a {
+    color: orange;
+}
+
+ul {
+    color: green;
+}
+
+ul a {
+    color: lime;
+}
+
+ul p a {
+    color: purple;
+}
+
+ul div a {
+    color: lightblue;
+}
