--- a/projects/studio-gallery/css/style.css
+++ b/projects/studio-gallery/css/style.css
@@ -8,11 +8,30 @@
 */
 
 #cosmic-warp {
-    margin-top: 10px;
-    margin-right: 10px;
+    margin-top: 30px;
+    padding: 5px;
+
+    border-style: inset;
+    border-width: 5px;
+    border-color: rgb(31, 65, 188);
+    background-color: rgb(131, 131, 131);
 }
 
 #black-hole {
-    margin-top: 100px;
-    margin-left: 10px;
+    margin-top: 170px;
+    margin-left: 150px;
+    margin-right: -50px;
+}
+
+#supernova {
+    margin-top: 170px;
+    margin-left: -50px;
+    margin-right: 150px;
+}
+
+#space-text {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 24px;
+    margin: -10px 0px 0px 250px;
+    display: inline-block;
 }
