--- a/exercises/document-flow-drills/css/drill.css
+++ b/exercises/document-flow-drills/css/drill.css
@@ -11,9 +11,43 @@
     display: inline-block;
 }
 /* Drill 4 - Write your code solution below */
+#d4-div2 {
+    display: inline-block;
+}
+#d4-div3 {
+    display: inline-block;
+}
 
+#d4-div4 {
+    display: inline-block;
+}
 
+#d4-div6 {
+    display: inline-block;
+}
+
+#d4-div7 {
+    display: inline-block;
+}
 /* Drill 5 - Write your code solution below */
+.d5-div {
+    display: inline-block;
+}
 
+#d5-div1 {
+    width: 250px;
+}
 
+#d5-div2 {
+    width: 230px;
+}
 /* Drill 6 - Write your code solution below */
+#d6-div2 {
+    display: inline-block;
+    width: 260px;
+}
+
+#d6-div3 {
+    display: inline-block;
+    width: 270px;
+}
