--- a/exercises/blog-with-sidebar/css/style.css
+++ b/exercises/blog-with-sidebar/css/style.css
@@ -5,7 +5,8 @@
 body {
     margin: 0px;
     font-family: sans-serif;
-    background-color: rgb(2, 2, 68);
+    background-image: url("../images/smg-space-background.jpg");
+    background-size: cover;
 }
 
 #grid-layout {
