--- a/exercises/trek-cards/css/style.css
+++ b/exercises/trek-cards/css/style.css
@@ -33,4 +33,14 @@
     display: block;
     text-align: center;
     padding: 24px;
+    border: 3px solid rgb(44, 132, 44);
+}
+
+.card-style-1 a:hover {
+    background-color: transparent;
+    border: 3px solid rgb(44, 132, 44);
+    color: rgb(44, 132, 44);
+    transition: 
+        background-color 0.5s,
+        color 0.5s;
 }
