--- a/exercises/three-heroes/css/style.css
+++ b/exercises/three-heroes/css/style.css
@@ -7,10 +7,8 @@ body {
     font-family: sans-serif;
 }
 
-#hero-1 {
-    background-image: url(../images/fall-road-background.jpg);
+.hero {
     height: 100vh;
-    color: white;
     background-position: center center;
     background-size: cover;
     display: flex;
@@ -19,80 +17,79 @@ body {
     flex-direction: column;
 }
 
+#hero-1 {
+    background-image: url(../images/fall-road-background.jpg);
+    color: rgb(255, 192, 149);
+}
+
 #hero-1 h1 {
-    font-size: 72px;
+    font-size: 120px;
     margin: 0px;
 }
 
 #hero-1 h4 {
-    font-size: 48px;
-    margin: 24px;
+    font-size: 72px;
+    margin: 36px;
 }
 
 #hero-1 a {
+    font-size: 48px;
+    font-weight: bolder;
     background-color: black;
     text-decoration: none;
-    color: white;
-    padding: 16px;
+    color: rgb(255, 192, 149);
+    padding: 24px;
     border-radius: 20px;
 }
 
 #hero-2 {
     background-image: url(../images/cyberwave.jpg);
-    height: 100vh;
     color: white;
-    background-position: center center;
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
 }
 
 #hero-2 h1 {
-    font-size: 72px;
+    font-size: 120px;
     margin: 0px;
 }
 
 #hero-2 h4 {
-    font-size: 48px;
-    margin: 24px;
+    font-size: 72px;
+    margin: 48px;
+    text-align: center;
 }
 
 #hero-2 a {
+    font-size: 48px;
+    font-weight: bolder;
     background-color: rgb(16, 83, 110);
     text-decoration: none;
     color: white;
-    padding: 16px;
+    padding: 24px;
     border-radius: 20px;
 }
 
 #hero-3 {
     background-image: url(../images/abstract.jpg);
-    height: 100vh;
     color: black;
-    background-position: center center;
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
 }
 
 #hero-3 h1 {
-    font-size: 72px;
+    font-size: 120px;
     margin: 0px;
 }
 
 #hero-3 h4 {
-    font-size: 48px;
-    margin: 24px;
+    font-size: 72px;
+    margin: 48px;
+    text-align: center;
 }
 
 #hero-3 a {
+    font-size: 48px;
+    font-weight: bolder;
     background-color: black;
     text-decoration: none;
     color: white;
-    padding: 16px;
+    padding: 24px;
     border-radius: 20px;
 }
