--- a/demos/20-media-queries/css/style.css
+++ b/demos/20-media-queries/css/style.css
@@ -53,11 +53,66 @@ body {
     gap: 48px;
 }
 
-@media screen and (max-width: 740px) and (min-width: 450px) {
-    body {
-        background-color: blueviolet;
-    }
+.featured {
+    background-color: #222222;
+    color: white;
+    padding: 24px 0px;
+}
 
+.featured h2 {
+    font-size: 36px;
+    text-align: center;
+}
+
+.grid img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 24px;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 16px;
+    grid-template-areas: 
+        "txt1 img1 img2 img2"
+        "img3 img3 img4 txt2";
+}
+
+#p1 {
+    grid-area: txt1;
+}
+
+#p2 {
+    grid-area: txt2;
+}
+
+#img1 {
+    grid-area: img1;
+}
+
+#img2 {
+    grid-area: img2;
+}
+
+#img3 {
+    grid-area: img3;
+}
+
+#img4 {
+    grid-area: img4;
+}
+
+.grid p {
+    border: 2px solid #ffb700;
+    border-radius: 24px;
+    padding: 20px;
+    margin: 0px;
+}
+
+/* Tablet Breakpoint */
+@media screen and (max-width: 740px) and (min-width: 450px) {
     .content-container h1 {
         font-size: 28px;
     }
@@ -69,14 +124,19 @@ body {
     .image-container {
         height: 300px;
     }
+
+    .grid {
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: 
+            "txt1 img1"
+            "img2 img2"
+            "img3 img3"
+            "img4 txt2";
+    }
 }
 
 /* MOBILE BREAKPOINT */
 @media screen and (max-width:450px) {
-    body {
-        background-color: firebrick;
-    }
-
     #nav {
         flex-direction: column;
         align-items: center;
@@ -94,5 +154,23 @@ body {
 
     .content-container {
         text-align: center;
+    }
+
+    .grid {
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+            "txt1"
+            "img1"
+            "img2"
+            "img3"
+            "img4"
+            "txt2";
+    }
+
+    .grid p {
+        height: 300px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
