--- a/projects/portfolio/css/style.css
+++ b/projects/portfolio/css/style.css
@@ -3,6 +3,7 @@
 }
 
 body {
+    background-color: rgb(83, 96, 97);
     margin: 0px;
     font-family: sans-serif;
 }
@@ -37,21 +38,35 @@ body {
     gap: 12px;
     max-width: 2000px;
     margin: 12px auto;
+    background-color: rgb(60, 70, 71);
 }
 
 #gallery img {
     width: 100%;
+    border-radius: 28px;
 }
 
 #card-section {
     display: flex;
-    justify-content: space-between;
-    background-color: darkblue;
+    background-color: rgb(83, 96, 97);
     padding: 24px;
 }
 
 .card {
     flex: 1;
-    border: 3px solid blue;
+    border: 3px solid rgb(39, 72, 75);
+    padding: 24px;
+    border-radius: 28px;
 }
 
+.card h3 {
+    font-size: 28px;
+    margin-bottom: 32px;
+    color: white;
+}
+
+.card a {
+    font-size: 20px;
+    text-decoration: none;
+    color: white;
+}
