--- a/exercises/grrm/css/style.css
+++ b/exercises/grrm/css/style.css
@@ -441,10 +441,6 @@ body {
 /* TODO: Write your media queries here */
 
 @media screen and (max-width: 1000px) and (min-width: 801px) {
-    
-    body {
-        background: red;
-    }
 
     #header h1 {
         font-size: 60px;
@@ -459,13 +455,22 @@ body {
     #nav a {
         flex: 200px;
     }
+
+    #grid-layout {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-areas: 
+            "header header header"
+            "navbar navbar navbar"
+            "banner banner banner"
+            "card-1 card-2 card-3"
+            "aside blog blog"
+            "footer footer footer"
+            "bottom bottom bottom";
+    }
 }
 
 @media screen and (max-width: 800px) {
-
-    body {
-        background: green;
-    }
 
     #header h1 {
         font-size: 48px;
@@ -489,12 +494,21 @@ body {
         text-align: center;
     }
 
-    #banner-container img {
-        max-width: 600px;
-    }
 
     #grid-layout {
         display: grid;
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+            "header"
+            "navbar"
+            "banner"
+            "card-1"
+            "card-2"
+            "card-3"
+            "aside"
+            "main"
+            "blog"
+            "footer";
     }
 
 }
