--- a/projects/final-eval/css/style.css
+++ b/projects/final-eval/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&family=Knewave&family=Racing+Sans+One&display=swap');
+
 * {
     box-sizing: border-box;
 }
@@ -7,11 +9,92 @@ body {
     font-family: sans-serif;
 }
 
-.single-column-layout{
+.single-column-layout {
     width: 100%;
-    max-width: 800px;
+    font-family: "Racing Sans One", serif;
+    text-align: center;
+    max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
-    background-color: #2c2c2c;
+    background-color: green;
     height: 100vh;
+}
+
+.single-column-layout #name {
+    margin: 0px;
+    padding: 16px;
+    font-size: 24px;
+}
+
+.single-column-layout #superbowl {
+    margin: 0px;
+    font-size: 72px;
+}
+
+.single-column-layout #extra-party {
+    margin: 0px;
+    padding: 16px;
+    font-size: 40px;
+}
+
+.single-column-layout .team {
+    margin: 16px;
+    padding: 12px;
+    font-size: 36px;
+}
+
+.single-column-layout #time {
+    margin: 32px;
+    font-size: 52px;
+}
+
+.single-column-layout p {
+    padding: 0px;
+    font-size: 24px;
+}
+
+.single-column-layout p #start{
+    margin-top: 20px;
+}
+
+.single-column-layout p #end{
+    margin-bottom: 20px;
+}
+
+.single-column-layout #location {
+    margin-top: 28px;
+    margin-bottom: 120px;
+    font-size: 24px;
+}
+
+.single-column-layout a {
+    background-color: darkolivegreen;
+    padding: 16px;
+    border-radius: 36px;
+    margin: 48px;
+    font-size: 28px;
+}
+
+.single-column-layout #contact {
+    margin-top: 48px;
+    font-size: 16px;
+}
+
+.single-column-layout a {
+    text-decoration: none;
+    color: black;
+}
+
+.side-by-side {
+    display: flex;
+    align-items: center;
+}
+
+.side-by-side .image-container {
+    flex: 1;
+}
+
+.side-by-side .image-container img {
+    width: 250px;
+    margin-top: 24px;
 }
