--- a/projects/restaurant/css/style.css
+++ b/projects/restaurant/css/style.css
@@ -160,7 +160,7 @@ body {
     text-decoration: none;
     display: inline-block;
     background-color: #341D38;
-    color: #D8A128;
+    color: #FFCE65;
     padding: 24px 48px;
     border-radius: 48px;
 }
