--- a/projects/restaurant/css/style.css
+++ b/projects/restaurant/css/style.css
@@ -62,8 +62,8 @@ body {
     color: #D8A128;
     font-size: 96px; 
     position: absolute;
-    top: 20%;
-    left: 20%;
+    top: 10%;
+    left: 10%;
 }
 
 #hero-1 a {
@@ -75,8 +75,8 @@ body {
     border-radius: 32px;
     padding: 24px 48px;
     position: absolute;
-    left: 20%;
-    top: 45%;
+    left: 10%;
+    top: 35%;
 }
 
 #hero-1 a:hover {
@@ -92,36 +92,6 @@ body {
     width: 100%;
     text-align: center;
     font-size: 20px;
-}
-
-@media screen and (max-width: 960px) {
-    .navbar {
-        flex-direction: column;
-        display: block;
-        text-align: center;
-    }
-
-    .navbar #logo-container {
-        margin-right: 0px;
-        text-align: center;
-    }
-
-    .navbar #logo-container img {
-        display: inline-block;
-    }
-
-    .navbar a {
-        padding: 24px;
-    }
-
-    #hero-1 h1 {
-        font-size: 72px;
-    }
-
-    #hero-1 a {
-        font-size: 36px;
-        top: 55%;
-    }
 }
 
 .side-by-side {
@@ -145,11 +115,17 @@ body {
 
 .side-by-side .image-container img {
     width: 100%;
-    max-width: 400px;
+    max-width: 500px;
+    min-width: 150px;
 }
 
 .side-by-side .text-container h1 {
     font-size: 48px;
+}
+
+.side-by-side .text-container p {
+    font-size: 20px;
+    width: 400px;
 }
 
 .side-by-side .text-container h2 {
@@ -196,8 +172,10 @@ body {
 }
 
 #menu .item {
+    text-align: center;
     color: #FFCE65;
     padding: 32px;
+    height: 100%;
     background-color: #341D38;
 }
 
@@ -220,12 +198,47 @@ body {
 
 @media screen and (max-width: 1270px) {
     #hero-1 a {
-        top: 65%;
+        top: 40%;
     }
 
     #menu {
-        grid-template-columns: 1fr;
+        grid-template-columns: 1fr 1fr;
         width: 100%;
+    }
+}
+
+@media screen and (max-width: 960px) {
+    .navbar {
+        flex-direction: column;
+        display: block;
+        text-align: center;
+    }
+
+    .navbar #logo-container {
+        margin-right: 0px;
+        text-align: center;
+    }
+
+    .navbar #logo-container img {
+        display: inline-block;
+    }
+
+    .navbar a {
+        padding: 24px;
+    }
+
+    #hero-1 h1 {
+        font-size: 72px;
+    }
+
+    #hero-1 a {
+        font-size: 36px;
+        top: 40%;
+    }
+
+    .side-by-side .text-container p {
+        font-size: 16px;
+        width: 250px;
     }
 }
 
@@ -238,8 +251,16 @@ body {
         font-size: 24px;
     }
 
+    .side-by-side .text-container p {
+        font-size: 12px;
+    }
+
     .side-by-side .text-container a {
         font-size: 16px;
         padding: 16px 32px;
+    }
+
+    #menu {
+        grid-template-columns: 1fr;
     }
 }
